SONAR-26098 Sonar-Spring enhancements
This PR refactors the Spring MVC configuration to support flexible setup in downstream applications (like SCA) by removing the @EnableWebMvc annotation from the shared CommonWebConfig class and moving it to the SonarQube-specific ServerWebConfig implementation. It also adds a Java module descriptor to sonar-spring and consolidates dependencies.

Key Changes:
- Removed @EnableWebMvc from CommonWebConfig to allow downstream applications to customize MVC setup
- Added module-info.java to sonar-spring for Java module system support
- Promoted dependencies from compileOnly to api scope to support module requirements